# expence-tracker

./: DESIGN.md  README.md  package-lock.json  package.json  render.yaml  tailwind.config.js
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/api/: routes.py
backend/graph/: chat.py  graph.py  nodes.py  routing.py  state.py
backend/policy_db/: chroma.sqlite3
backend/schema/: models.py  prompts.py
backend/services/: llm.py  tavily.py  tools.py  vector_store.py
frontend/: .env.example  DB.md  README.md  app.json  package-lock.json  package.json
frontend/src/app/: _layout.tsx  sign-in.tsx  sign-up.tsx
frontend/src/components/: ActiveTripCard.tsx  AnalyticsCard.tsx  CustomCalendar.tsx  DonutChart.tsx  FileUpload.tsx  HeroTripCard.tsx  ProgressBar.tsx  ReceiptDecision.tsx  Sparkles.tsx  TopNavigator.tsx  VerticalStepper.tsx
frontend/src/hooks/: useAuth.tsx  useRefresh.ts
frontend/src/lib/: api.ts  receiptApi.ts
langraph/: graph.ipynb  pyproject.toml
langraph/policy_db/: chroma.sqlite3
rag/: .gitignore  openai-rag.ipynb
rag/new_policy_db/: chroma.sqlite3
src/app/: _layout.tsx  index.tsx  sign-in.tsx
src/app/(employee)/: _layout.tsx  chat.tsx  index.tsx  profile.tsx  trip-details.tsx
src/app/auditor/: _layout.tsx  index.tsx  profile.tsx  trip-details.tsx
src/app/employee/: _layout.tsx  (+4 more)
src/components/: ActiveTripCard.tsx  AnalyticsCard.tsx  BotMessage.tsx  ReceiptDecision.tsx  SecondaryAction.tsx  TopNavigator.tsx  TotalSpendCard.tsx  TripBudgetCard.tsx  TripObjectives.tsx  UserMessage.tsx
(+15 files in other folders)
